--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 	<tr>
 		<td style="height: 1280px" class="auto-style4" colspan="2">
 		<h1>Homepage</h1>
+		<p class="auto-style12"><em>Blog #2: DukeEd.com finally released 
+		(7/5/2023)</em></p>
+		<p>Looks like my DukeEd.com site has finally gone gold. You can check it 
+		out by clicking this link: <a href="https://dukeed.netlify.app">
+		https://dukeed.netlify.app</a>, and you want to know more about it, 
+		check out <a href="portfolio.html">Portfolio</a>.</p>
 		<p class="auto-style12"><em>Blog #1: The start of something new</em></p>
 		<p>This is a website I had made as an alternative to other websites like 
 		carrd.co or linktr.ee and I also wanted to make a website that could 
