--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 		the site became an obscurity as no one visited there, and the owner had 
 		to close it in 17th May of 2001, as it was sold to GameSpy (an old 
 		popular multiplayer host that got defunct later).
-		<a href="https://dukeed.neocities.org">DukeEd.com</a>'s goal is to give 
+		<a href="https://dukeed.netlify.app">DukeEd.com</a>'s goal is to give 
 		the website the a proper archive of the old one and a new website that 
 		has the look and feel of the original one, but has frequent new updates 
 		and news of Duke Nukem related projects like the Restoration Project or 
