--- a/downloads.html
+++ b/downloads.html
@@ -13,6 +13,9 @@
 	font-size: large;
 	font-family: Bahnschrift;
 }
+.auto-style23 {
+	text-align: center;
+}
 </style>
 </head>
 <link rel="icon" href="images/fluddicon.png">
@@ -35,21 +38,25 @@
 		<a href="about.html">ABOUT</a><tr>
 		<td style="height: 1280px" class="auto-style4" colspan="2">
 		<h1>Downloads</h1>
-		<p class="auto-style12"><a href="https://www.dropbox.com/s/qk6qolhh0ivqk9l/parkour_rope.dnf?dl=0"><em>parkour_rope.dnf</em></a></p>
+		<p class="auto-style12"><a href="downloads/parkour_rope.dnf"><em>parkour_rope.dnf</em></a></p>
 		<p>A map that I had made, which is also my first map, it is basically a 
 		parkour map made for Duke Nukem Forever Restoration Project and has something you'd see 
 		in those surf/jump maps in Team Fortress 2. More info about the map can 
 		be found in the <a href="portfolio.html">Portfolio</a> page.</p>
-		<p class="auto-style12"><a href="https://www.dropbox.com/s/zlvxjgpyd235ex6/DOOM1.WAD?dl=0"><em>A rare, but unofficial Doom wad file</em></a></p>
+		<p class="auto-style12"><a href="downloads/DOOM1.WAD"><em>A rare, but unofficial Doom wad file</em></a></p>
 		<p>This was actually sold in the stores in the 90's in stores and 
 		basically most of the sharewares that you had found in stores were not 
 		made by id Software except for the game, obviously. The sellers of this 
 		wad file did something special and decided to put some sound files from 
 		movies (most of them are from mafia genre) and rest of the gameplay 
 		remains intact though.
-		<a href="https://twitter.com/fluddsskark/status/1652568117665755142?s=20">
-		Here's a preview of the shareware being played in Crispy Doom</a></p>
-		<p class="auto-style12"><em><a href="https://www.dropbox.com/s/gzkvmwwe0wxd4m4/gamerpics.zip?dl=0">XBox 360 Gamerpics</a></em></p>
+		Below is some footage of the mod being played in Crispy Doom source 
+		port.<p class="auto-style23">
+		 <video width="500px" controls="controls" style="height: 274px">
+        <source src="downloads/doom.mp4"
+            type="video/mp4">
+    </video></p>
+		<p class="auto-style12"><em><a href="downloads/gamerpics.zip">XBox 360 Gamerpics</a></em></p>
 		<p </p>
 		Here, I have some old XBox 360 gamerpics that I took from a site in 
 		Wayback Machine, but are sadly in lowres.<p>&nbsp;</p>
