--- a/downloads.html
+++ b/downloads.html
@@ -1,5 +1,5 @@
-
 <head>
+<title>fluddsskark - Downloads</title>
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" type="text/css">
