--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ﻿<head>
+<title>fluddsskark - Home</title>
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
