--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <head>
+<title>fluddsskark - Portfolio</title>
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" type="text/css">
