--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
+<meta property="og:title" content="fluddsskark">
+<meta property="og:description" content="fluddsskark's website">
+<meta property="og:image" content="/images/fluddsskark.jpg">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
@@ -30,7 +33,7 @@
 		fluddsskark's neocity<br><span class="auto-style7">"...because carrd.co 
 		looked too modern"</span></td>
 		<td style="height: 158px; " class="auto-style8">
-		<img alt="fluddsskark" class="auto-style9" height="197" src="images/33a85a22080f9d80e1e8addc9329b69c81357da5_full.jpg" width="184"></td>
+		<img alt="fluddsskark" class="auto-style9" height="197" src="images/fluddsskark.jpg" width="184"></td>
 	</tr
 	<tr>
 	<tr>
