--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
-<meta property="og:title" content="fluddsskark">
-<meta property="og:description" content="fluddsskark's website">
-<meta property="og:image" content="/images/fluddsskark.jpg">
+<title>DukeEd.com</title>
+<meta name="title" content="fluddsskark">
+<meta name="description" content="fludd website">
+<meta name="image" content="/images/fluddsskark.jpg">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
