--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>DukeEd.com</title>
 <meta name="title" content="fluddsskark">
 <meta name="description" content="fludd website">
-<meta name="image" content="/images/fluddsskark.jpg">
+<meta property="og:image" content="images/fluddsskark.jpg" />
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
