--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
-<title>DukeEd.com</title>
-<meta name="title" content="fluddsskark">
-<meta name="description" content="fludd website">
-<meta property="og:image" content="images/fluddsskark.jpg" />
+<meta property="og:card" content="summary_large_image">
+<meta property="og:url" content="https://fluddsskark.netlify.app/">
+<meta property="og:title" content="fluddsskark">
+<meta property="og:description" content="fluddsskark">
+<meta property="og:image" content="images/fluddsskark.jpg">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
