--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:url" content="https://fluddsskark.netlify.app/">
 <meta property="og:title" content="fluddsskark">
 <meta property="og:description" content="fluddsskark">
-<meta property="og:image" content="images/fluddsskark.jpg">
+<meta property="og:image" content="/images/fluddsskark.jpg">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
