--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,14 @@
 <title>fluddsskark - Portfolio</title>
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="fluddsskark">
-<meta property="og:description" content="fluddsskark's website">
-<meta property="og:image" content="/images/fluddsskark.jpg">
+<title data-react-helmet="true">Portfolio</title>
+<meta data-react-helmet="true" charset="utf-8"/>
+<meta data-react-helmet="true" property="og:title" content="fluddsskark - Portfolio"/>
+<meta data-react-helmet="true" property="og:description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" name="description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" property="og:image" content="/images/fluddsskark.jpg"/>
+<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/> 
+<meta charset="utf-8">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style17 {
