--- a/404.html
+++ b/404.html
@@ -2,9 +2,14 @@
 <title>404 Error</title>
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="fluddsskark">
-<meta property="og:description" content="fluddsskark's website">
-<meta property="og:image" content="/images/fluddsskark.jpg">
+<title data-react-helmet="true">404 Error</title>
+<meta data-react-helmet="true" charset="utf-8"/>
+<meta data-react-helmet="true" property="og:title" content="fluddsskark - 404 Error"/>
+<meta data-react-helmet="true" property="og:description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" name="description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" property="og:image" content="/images/fluddsskark.jpg"/>
+<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/> 
+<meta charset="utf-8">
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
@@ -29,7 +34,7 @@
 <table style="width: 730" class="auto-style3" align="center">
 	<tr>
 		<td style="height: 158px; width: 708px;" class="auto-style6">
-		fluddsskark's neocity<br><span class="auto-style7">"...because carrd.co 
+		fluddsskark<br><span class="auto-style7">"...because carrd.co 
 		looked too modern"</span></td>
 		<td style="height: 158px; " class="auto-style8">
 		<img alt="fluddsskark" class="auto-style9" height="197" src="images/fluddsskark.jpg" width="184"></td>
