--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
-<title>DukeEd.com</title>
-<meta name="title" content="fluddsskark">
-<meta name="description" content="fludd website">
-<meta name="image" content="/images/fluddsskark.jpg">
+<title data-react-helmet="true">Home</title>
+<meta data-react-helmet="true" charset="utf-8"/>
+<meta data-react-helmet="true" property="og:title" content="fluddsskark - Home"/>
+<meta data-react-helmet="true" property="og:description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" name="description" content="fluddsskark's website"/>
+<meta data-react-helmet="true" property="og:image" content="/images/fluddsskark.jpg"/>
+<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/> 
+<meta charset="utf-8">
+<!DOCTYPE html>
 <link href="style.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 .auto-style13 {
