--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <meta content="en-us" http-equiv="Content-Language">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-png" href="/images/fluddicon.png">
+<div class="meta-tag">
 <title data-react-helmet="true">Home</title>
 <meta data-react-helmet="true" charset="utf-8"/>
 <meta data-react-helmet="true" property="og:title" content="fluddsskark - Home"/>
 <meta data-react-helmet="true" property="og:description" content="fluddsskark's website"/>
 <meta data-react-helmet="true" name="description" content="fluddsskark's website"/>
 <meta data-react-helmet="true" property="og:image" content="/images/fluddsskark.jpg"/>
-<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/> 
+<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/>
+</div>
 <meta charset="utf-8">
 <!DOCTYPE html>
 <link href="style.css" rel="stylesheet" type="text/css">
