--- a/links.html
+++ b/links.html
@@ -1,55 +1,135 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<title>fluddsskark - Links</title>
-<meta content="en-us" http-equiv="Content-Language">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">\
-<title data-react-helmet="true">Links</title>
-<meta data-react-helmet="true" charset="utf-8"/>
-<meta data-react-helmet="true" property="og:title" content="fluddsskark - Links"/>
-<meta data-react-helmet="true" property="og:description" content="fluddsskark's website"/>
-<meta data-react-helmet="true" name="description" content="fluddsskark's website"/>
-<meta data-react-helmet="true" property="og:image" content="/images/fluddsskark.jpg"/>
-<meta data-react-helmet="true" property="twitter:image" content="/images/fluddsskark.jpg"/> 
-<meta charset="utf-8">
-<link href="style.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-.auto-style17 {
-	border-style: solid;
-	border-color: #1b1f34;
-	background-color: #424570;
-	text-align: center;
-	vertical-align: top;
-	font-family: Bahnschrift;
-	color: #00A3CE;
-}
-.body {
-  background-color: #424570;
-}
-</style>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
+
+<title></title>
+<meta name="description" content="fluddsskark's website" />
+<meta name="keywords" content="fluddsskark" />
+<meta content="english" name="Language"/>
+<meta content="public" http-equiv="cache-control"/>
+<meta content="index,follow" name="robots"/>
+
+<meta property="og:url"           content="https://fluddsskark.netlify.app/" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Fluddsskark - Links" />
+<meta property="og:description"   content="fluddsskark's website" />
+<meta property="og:image"         content="/images/fluddsskark.jpg" />
+
+<meta name="viewport" content="width-device-width, initial-scale=1.0"/>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+
+<!-- CSS FILES -->
+<link rel="stylesheet" type="text/css" href="css/nuke-ice.css" />
+
+
+<!-- JS FILES -->
+<script type="text/javascript" src="js/basiccalendar.js"></script>
+
+<title>Fluddsskark - Links</title>	
+<link rel = "icon" href = "/images/fluddsskark.jpg" type = "image/x-icon">
+
+
 </head>
 
+<body>
 
-<table style="width: 730" class="auto-style3" align="center">
-	<tr>
-		<td style="height: 158px; width: 708px;" class="auto-style6">
-		fluddsskark's neocity<br><span class="auto-style7">"...because carrd.co 
-		looked too modern"</span></td>
-		<td style="height: 158px; " class="auto-style8">
-		<img alt="fluddsskark" class="auto-style9" height="197" src="images/fluddsskark.jpg" width="184"></td>
-	</tr
-	<tr>
-	<tr>
-		<td style="height: 23px" class="auto-style17" colspan="2">
-		<span class="auto-style11"><a href="index.html">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="links.html">LINKS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="downloads.html">DOWNLOADS</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="portfolio.html">PORTFOLIO</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="about.html">ABOUT</a></span></td>
-	</tr>
-	<tr>
-		<td style="height: 788px" class="auto-style4" colspan="2">
-		<h1>Links</h1>
-		<p class="auto-style12"><em>My personal links:</em></p>
-		<p>Here are some links that are affiliated with me:<br>
+<div id="wrapper">
+
+
+
+
+
+<div id="banner">
+
+	<div id="banner-edit"></div>
+
+</div>
+
+
+
+
+
+<div id="container">
+
+
+
+
+
+<div id="col-1">
+
+	
+
+	<div class="NavBox">
+		<div class="NavHead">
+			<div class="NavHeadInfo">SiteMap</div>
+		</div>
+		<div class="NavFill">
+			<div class="nav-menu">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="links.html">Links</a></li>
+					<li><a href="downloads/pg1.html">Downloads</a></li>
+					<li><a href="portfolios/pg1.html">Portfolio</a></li>
+					<li><a href="blogs.html">Blog Archive</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="NavFooter"></div>
+	</div>
+
+	
+	
+	
+
+	<div class="NavBox">
+		<div class="NavHead">
+			<div class="NavHeadInfo">Matrix.to server!</div>
+		</div>
+		<div class="NavFill">
+			<div class="NavInfo">
+			
+				<p><a href="https://matrix.to/#/#fluddsskark:matrix.org" target="_blank">Click here!</a></p>
+
+			</div>
+		</div>
+		<div class="NavFooter"></div>
+	</div>
+
+
+
+
+
+
+
+	
+
+</div>
+
+
+
+
+
+
+
+
+
+<div id="col-2">
+
+
+
+	<div class="CntBox">
+		<div class="CntHead">
+			<div class="CntHeadInfo"><em><strong>Links</strong></em></div>
+		</div>
+		<div class="CntFill">
+			<div class="CntInfo">
+				
+				<p>Here are some links that are affiliated with me:<br>
 		<a href="https://twitter.com/fluddsskark">
 		Twitter</a><br>
 		<a href="https://steamcommunity.com/id/fluddsskark">
@@ -88,14 +168,101 @@
 		<a href="https://tcrf.net/The_Cutting_Room_Floor">The Cutting Room Floor</a>: 
 		Beta/Alpha content of video games always <br>interested me, and if you're 
 		interested in that content, <br>why not check this site out?</p>
-	<tr>
-		<td class="auto-style1" style="height: 39px" colspan="2">
-		<p class="auto-style2">Â© 2023 by fluddsskark, <br>this website was 
-		made using a WYSIWYG</p>
-		</td>
-	</tr>
-</table>
+
+			</div>
+		</div>
+		<div class="CntFooter"></div>
+	</div>
+
+	
 
 
 
 
+
+</div>
+
+
+
+
+
+
+
+
+
+<div id="col-3">
+
+
+
+	<div class="NavBox">
+		<div class="NavHead">
+			<div class="NavHeadInfo">Calendar</div>
+		</div>
+		<div class="NavFill">
+			<div class="NavCal">
+				<script type="text/javascript">
+						var todaydate=new Date()
+						var curmonth=todaydate.getMonth()+1 //get current month (1-12)
+						var curyear=todaydate.getFullYear() //get current year
+						document.write(buildCal(curmonth ,curyear, "main", "month", "daysofweek", "days", 0));
+				</script>
+			</div>
+		</div>
+		<div class="NavFooter"></div>
+	</div>
+
+
+
+	
+	
+	
+
+	
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="clearB"></div>
+</div>
+
+
+
+<div id="foot">
+	
+	
+	<div id="foot-Info-Left">
+	
+		<p>Copyright © fluddsskark 2023</p>
+	
+		<p>email me @ <a href="mailto:fluddsskark@outlook.com">fluddsskark@outlook.com</a></p>
+
+	</div>	
+
+	
+
+	
+
+	<div id="foot-Info-Right">
+		<script src="js/foot_scroller_edit.js" type="text/javascript"></script>
+	</div>	
+
+<div class="clearB"></div>
+
+
+</div>
+</div>
+</body>
+</html>
