--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
+<meta http-equiv="Content-Type" content="text/html; meta charset=utf-8" />
 
 <title></title>
 <meta name="description" content="fluddsskark's website" />
@@ -245,7 +245,7 @@
 	
 	<div id="foot-Info-Left">
 	
-		<p>Copyright © fluddsskark 2023</p>
+		<p>Copyright Â© fluddsskark 2023</p>
 	
 		<p>email me @ <a href="mailto:fluddsskark@outlook.com">fluddsskark@outlook.com</a></p>
 
