--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<div class="CntFill">
 			<div class="CntInfo">
 				
-				<p>Welcome to my second iteration of my website! Though I miss my old one, this one is far, far more polished than the old one dated April 2023-ish. </p>
+				<p>Welcome to my second iteration of my website! Though I miss my <a href="old/index.html" target="_blank">old one</a>, this one is far, far more polished than the old one dated April 2023-ish. </p>
 
 			</div>
 		</div>
