--- a/portfolios/pg1.html
+++ b/portfolios/pg1.html
@@ -189,7 +189,7 @@
 		image:</em></strong></p>
 		<p>
 		<a href="../images/img10.jpg">
-		<img alt="dukeed1" height="139" src="images/img10_small.jpg" width="161" xthumbnail-orig-image="../images/img10.jpg"></a><a href="../images/img11.jpg"><img alt="screenshot2" height="139" src="../images/img11_small1.jpg" width="161" xthumbnail-orig-image="../images/img11.jpg" align="right"></a></p>
+		<img alt="dukeed1" height="139" src="../images/img10_small.jpg" width="161" xthumbnail-orig-image="../images/img10.jpg"></a><a href="../images/img11.jpg"><img alt="screenshot2" height="139" src="../images/img11_small1.jpg" width="161" xthumbnail-orig-image="../images/img11.jpg" align="right"></a></p>
 			</div>
 		</div>
 		<div class="CntFooter"></div>
