--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		<div class="CntFill">
 			<div class="CntInfo">
 				
-				<p>Greetings! My name is fluddsskark and I'm a software/web developer who plans on settling on Europe one day. I know how to use couple of programming languages and I also know how to use Blender (still a bit of an amateur to that). But, check this website's other pages too, like my portfolios and other pages.</p>
+				<p>Greetings! My name is fluddsskark and I'm a software/web developer. I know how to use couple of programming languages and I also know how to use Blender (still a bit of an amateur to that). But, check this website's other pages too, like my portfolios and other pages.</p>
 				<p>Have fun!</p>
 			</div>
 		</div>
