--- a/links.html
+++ b/links.html
@@ -137,8 +137,7 @@
 		<a href="https://youtube.com/@fluddsskark">
 		YouTube</a><br>
 		<a href="https://forums.duke4.net/user/9358-fluddsskark/">
-		Duke4 Forums (note that you will be needing</a><br>
-		<a href="https://forums.duke4.net/user/9358-fluddsskark/">
+		Duke4 Forums (note that you will be needing
 		an account to access my profile)</a><br>
 		<a href="https://www.doomworld.com/profile/29115-fluddsskark/">
 		Doomworld</a><br>
